--- a/header.css
+++ b/header.css
@@ -29,15 +29,11 @@
 
 .header{
     width:100%;
-    height:60px;
+    height:10vh;
     background-color: rgb(0, 0, 0);
     
 }
-.header img{
-    width: 100%;
-    position: relative;
 
-}
 .header ul{
     width:65%;
     
@@ -69,10 +65,11 @@
     }
     .header{
    
-       height: 250px;
+       height: 40vh;
        background-color: rgb(0, 0, 0);
     }
     .header ul{
+        height: 30vh;
         width: 100%;
     }
     .main .header img{
@@ -91,16 +88,17 @@
 
 
 
-@media only screen and (min-width:421px) and (max-width:655px){
+@media only screen and (min-width:420px) and (max-width:655px){
     #menu{
         display: block;
     }
     .header{
     width: 100%;
-       height: 250px;
+       height: 40vh;
        background-color: rgb(0, 0, 0);
     }
     .header ul{
+        height: 30vh;
         width: 100%;
     }
     .header ul li a{
@@ -113,10 +111,37 @@
 
 
 
-@media only screen and (min-width:656px) and (max-width:800px){
-   
+@media only screen and (min-width:655px) and (max-width:800px){
+    #menu{
+        display: block;
+    }
+    .header{
+        width: 100%;
+           height: 10vh;
+           background-color: rgb(0, 0, 0);
+           
+        }
     .header ul{
         width: 70%;
+        text-align: center;
+    }
+ 
+
+}
+
+@media only screen and (min-width:800px) and (max-width:1200px){
+    #menu{
+        display: block;
+    }
+    .header{
+        width: 100%;
+           height: 5vh;
+           background-color: rgb(0, 0, 0);
+           
+        }
+    .header ul{
+        width: 70%;
+        text-align: center;
     }
  
 }
